--- a/guides/css/main.scss
+++ b/guides/css/main.scss
@@ -15,7 +15,7 @@ $muted-color: #777777;
 $subtle-color: #aaaaaa;
 $font: 'Rubik', sans-serif;
 $font-color: black;
-$code-font: 'Source Sans Pro', monospace;
+$code-font: 'Monaco', monospace;
 
 body {
   font-family: $font;
