start operationstore docs

--- a/guides/css/main.scss
+++ b/guides/css/main.scss
@@ -22,6 +22,10 @@ body {
   background: #fafafa;
 }
 
+strong, b {
+    font-weight: bold;
+}
+
 .header {
   box-shadow: 0px 0px 10px 0px #d6d6d6;
   z-index: 1;
@@ -132,6 +136,24 @@ a:hover, a:hover code {
   display: none;
 }
 
+.guide-container {
+  a.img-link {
+    background: none;
+    &:hover {
+      background: none;
+    }
+    img {
+      box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+      transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+      max-height: 300px;
+      max-width: 1000px;
+      &:hover {
+        box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+      }
+    }
+  }
+}
+
 .cell {
   overflow-x: scroll;
 }
@@ -145,10 +167,6 @@ a:hover, a:hover code {
   align-items: center;
 }
 
-.monitoring-img-group img {
-  max-height: 200px;
-  max-width: 500px;
-}
 
 .guides-toc {
   ul {
@@ -232,7 +250,7 @@ a:hover, a:hover code {
   }
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5 {
   margin: 25px 0px 15px 0px;
   a {
     text-decoration: none;
@@ -247,6 +265,8 @@ h1 { font-size: 1.5rem; }
 h2 { font-size: 1.3rem; }
 h3 { font-size: 1.2rem; }
 h4 { font-size: 1.1rem; }
+h5 { font-size: 1.05rem; }
+
 
 table {
   width: 100%;
