--- a/guides/_layouts/default.html
+++ b/guides/_layouts/default.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>GraphQL - {{ page.title }}</title>
+    {% if page.section contains "GraphQL" %}
+      <title>{{ page.section }} - {{ page.title }}</title>
+    {% else %}
+      <title>GraphQL - {{ page.title }}</title>
+    {% endif %}
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400" rel="stylesheet" />
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
     <link rel="icon" href="{{ site.baseurl }}/graphql-ruby-icon.png">
