Add default mutation field.

--- a/lib/generators/graphql/templates/mutation_type.erb
+++ b/lib/generators/graphql/templates/mutation_type.erb
@@ -2,4 +2,10 @@ Types::MutationType = GraphQL::ObjectType.define do
   name "Mutation"
 
   # TODO: Add Mutations as fields
+  field :testField, types.String do
+    description "An example field added by the generator"
+    resolve ->(obj, args, ctx) {
+      "Hello World!"
+    }
+  end
 end
