Update TODO description.

--- a/lib/generators/graphql/templates/mutation_type.erb
+++ b/lib/generators/graphql/templates/mutation_type.erb
@@ -1,7 +1,7 @@
 Types::MutationType = GraphQL::ObjectType.define do
   name "Mutation"
 
-  # TODO: Add Mutations as fields
+  # TODO: Remove me
   field :testField, types.String do
     description "An example field added by the generator"
     resolve ->(obj, args, ctx) {
