Add Dashboard doc; add docs for pusher implementation; add pusher clients

--- a/guides/css/main.scss
+++ b/guides/css/main.scss
@@ -150,7 +150,7 @@ a:hover, a:hover code {
       box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
       transition: all 0.3s cubic-bezier(.25,.8,.25,1);
       max-height: 300px;
-      max-width: 1000px;
+      max-width: 100%;
       &:hover {
         box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
       }
