add pro header as needed

--- a/guides/css/main.scss
+++ b/guides/css/main.scss
@@ -8,6 +8,8 @@ $brand-color-light:  #ed8090;
 $brand-color-extralight:  #f9e8ee;
 $experimental-background: #fff7cf;
 $experimental-color: #655400;
+$pro-color: #237208;
+$pro-background: #e8f6e4;
 $faint-color: #f0f0f0;
 $code-border: #d6d6d6;
 $code-background: #fafafa;
@@ -197,21 +199,28 @@ a:hover, a:hover code {
   }
 }
 
-.experimental-header {
-  background-color: $experimental-background;
-  color: $experimental-color;
+@mixin doc-header($color, $background-color) {
+  background-color: $background-color;
+  color: $color;
   border-radius: $code-border-radius;
   padding: 10px 10px 0px 10px;
-  border: 1px solid $experimental-color;
+  border: 1px solid $color;
   a {
-    color: $experimental-color;
+    color: $color;
     &:hover {
-      background-color: $experimental-color;
-      color: $experimental-background;
+      background-color: $color;
+      color: $background-color;
     }
   }
 }
 
+.experimental-header {
+  @include doc-header($experimental-color, $experimental-background);
+}
+
+.pro-header {
+  @include doc-header($pro-color, $pro-background);
+}
 .guide-footer {
   background: $brand-color-extralight;
   margin: 25px 0px 0px 0px;
