--- a/guides/_layouts/guide.html
+++ b/guides/_layouts/guide.html
@@ -18,6 +18,16 @@ layout: default
     </p>
   </div>
 {% endif %}
+{% if page.pro %}
+  <div class="pro-header">
+    <p>
+      <strong>⚡️ Pro Feature ⚡️</strong>
+      <span style="font-style: italic;">
+        This feature is bundled with <a href="http://graphql.pro">GraphQL-Pro</a>.
+      </span>
+    </p>
+  </div>
+{% endif %}
 <h1 class="guide-header">{{ page.title }}</h1>
 <div class="guide-container">
   {{ content }}
