change header color

--- a/guides/css/main.scss
+++ b/guides/css/main.scss
@@ -8,8 +8,8 @@ $brand-color-light:  #ed8090;
 $brand-color-extralight:  #f9e8ee;
 $experimental-background: #fff7cf;
 $experimental-color: #655400;
-$pro-color: #237208;
-$pro-background: #e8f6e4;
+$pro-color: #406db5;
+$pro-background: #f1f4f9;
 $faint-color: #f0f0f0;
 $code-border: #d6d6d6;
 $code-background: #fafafa;
