Follow Ruby class naming conventions

--- a/lib/generators/graphql/templates/loader.erb
+++ b/lib/generators/graphql/templates/loader.erb
@@ -1,7 +1,7 @@
-class Loaders::<%= name %> < GraphQL::Batch::Loader
+class Loaders::<%= class_name %> < GraphQL::Batch::Loader
   # Define `initialize` to store grouping arguments, eg
   #
-  #     Loaders::<%= name %>.for(group).load(value)
+  #     Loaders::<%= class_name %>.for(group).load(value)
   #
   # def initialize()
   # end
