--- a/lib/generators/graphql/templates/function.erb
+++ b/lib/generators/graphql/templates/function.erb
@@ -1,7 +1,7 @@
-class Functions::<%= name %> < GraphQL::Function
+class Functions::<%= class_name %> < GraphQL::Function
   # Define `initialize` to store field-level options, eg
   #
-  #     field :myField, function: Functions::<%= name %>.new(type: MyType)
+  #     field :myField, function: Functions::<%= class_name %>.new(type: MyType)
   #
   # attr_reader :type
   # def initialize(type:)
